new/guac-ingestor-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.network/new-default: "true"
    io.kompose.service: guac-ingestor
  name: guac-ingestor
spec:
  containers:
    - args:
        - /opt/guac/guacingest
      image: local-organic-guac
      name: guac-ingestor
      resources: {}
      volumeMounts:
        - mountPath: /guac
          name: guac-ingestor-claim0
      workingDir: /guac
  restartPolicy: OnFailure
  volumes:
    - name: guac-ingestor-claim0
      persistentVolumeClaim:
        claimName: guac-ingestor-claim0
status: {}
