new/nats-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.network/new-default: "true"
    io.kompose.service: nats
  name: nats
spec:
  containers:
    - args:
        - --config
        - /config/nats/js.conf
        - -m
        - "8222"
      image: nats:2.9.14
      name: nats
      ports:
        - containerPort: 4222
        - containerPort: 8222
      resources: {}
      volumeMounts:
        - mountPath: /config/nats
          name: nats-claim0
  restartPolicy: OnFailure
  volumes:
    - name: nats-claim0
      persistentVolumeClaim:
        claimName: nats-claim0
status: {}
