new/service-health-2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: service-health-2
  name: service-health-2
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: service-health-2
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/new-default: "true"
        io.kompose.service: service-health-2
    spec:
      containers:
        - args:
            - /bin/bash
            - -c
            - |
              echo "checking-for-services";
              until nc -z guac-collectsub 2782 > /dev/null 2>&1; do sleep 5; done;
              echo "guac collectsub up";
              until curl -I http://guac-graphql:8080/query > /dev/null 2>&1; do sleep 5; done;
              echo "graphql up";
          image: emilioesc/guac-healthcheck:latest
          name: service-health-2
          resources: {}
          stdin: true
          tty: true
      restartPolicy: Always
status: {}
