new/guac-collectsub-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: guac-collectsub
  name: guac-collectsub
spec:
  ports:
    - name: "2782"
      port: 2782
      targetPort: 2782
  selector:
    io.kompose.service: guac-collectsub
status:
  loadBalancer: {}
