new/nats-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: nats
  name: nats
spec:
  ports:
    - name: "4222"
      port: 4222
      targetPort: 4222
    - name: "8222"
      port: 8222
      targetPort: 8222
  selector:
    io.kompose.service: nats
status:
  loadBalancer: {}
